[add]#11 배터리품질 상세 데이터 공장 정보 추가 및 리뷰 반영